Fix the style and the collapse of Mentioned Issues
Collapsing the summary of the issue was broken. It was implemented by
Webui::WebuiHelper#toggle_sliced_text. The helper has been removed and
the text is now collapsed in the same way as any other text in the application,
with "Show more/less" link.

Improve the style of the section too.

--- a/src/api/app/assets/stylesheets/webui/collapsible-text.scss
+++ b/src/api/app/assets/stylesheets/webui/collapsible-text.scss
@@ -44,3 +44,8 @@
   @include collapsible($maxHeight: 2.75em, $maxWidth: 'none');
   .obs-collapsible-textbox {  @extend .pr-0; }
 }
+
+#issue-summary {
+  @include collapsible($maxHeight: 1.5em);
+  .obs-collapsible-textbox {  @extend .pr-0; }
+}
